fix: overflow of customer selector

--- a/erpnext/public/scss/point-of-sale.scss
+++ b/erpnext/public/scss/point-of-sale.scss
@@ -185,7 +185,7 @@
 			display: flex;
 			flex-direction: column;
 			padding: var(--padding-md) var(--padding-lg);
-			overflow: hidden;
+			overflow: visible;
 
 			> .customer-field {
 				display: flex;
